--- a/eco_model/eco_model_dockwidget_base.ui
+++ b/eco_model/eco_model_dockwidget_base.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Climate model administration</string>
+   <string>Estimation of flood damage costs</string>
   </property>
   <widget class="QWidget" name="dockWidgetContents">
    <layout class="QVBoxLayout" name="verticalLayout_3">
