checkbox mapper extent

--- a/eco_model/eco_model_dockwidget_base.ui
+++ b/eco_model/eco_model_dockwidget_base.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>482</width>
+    <width>823</width>
     <height>967</height>
    </rect>
   </property>
@@ -18,7 +18,7 @@
     <item>
      <widget class="QTabWidget" name="twEcoModel">
       <property name="currentIndex">
-       <number>2</number>
+       <number>3</number>
       </property>
       <widget class="QWidget" name="tab">
        <attribute name="title">
@@ -164,6 +164,13 @@
             </property>
             <property name="text">
              <string/>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <widget class="QCheckBox" name="chbLimit">
+            <property name="text">
+             <string>Limit to Mapper extent </string>
             </property>
            </widget>
           </item>
